ecmascript/parser/tests/test262-error-references/fail/b02cbe75ce1ceb06.js.stderr
error: TS1005
 --> $DIR/tests/test262-parser/fail/b02cbe75ce1ceb06.js:1:9
  |
1 | [...0,{a=0}]=0
  |         ^

